src/app/app.component.css
.flexbox{
    display: flex;
}

.table {
    width: 50%;
    padding: 5%;
}

.form {
    width: 50%;
    padding: 2%;
    display: block;
}

.error {
    color: red;
    font-size: small;
}

input{
    padding: 1%;
}

.form select {
    display: block;
}
table {
    font-family: Arial, Helvetica, sans-serif;
    border-collapse: collapse;
    overflow-y:scroll;
    height:80%;
    display:block;
  }
  
 td, th {
    border: 1px solid #ddd;
    padding: 8px;
  }
  
 tr:nth-child(even){background-color: #f2f2f2;}
  
 tr:hover {background-color: #ddd;}
  
th {
    padding-top: 12px;
    padding-bottom: 12px;
    text-align: left;
    background-color: #DA70D6;
    color: white;
  }

  input[type=text], select {
    width: 100%;
    padding: 12px 20px;
    margin: 8px 0;
    display: inline-block;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
  }
  
  input[type=submit] {
    width: 100%;
    background-color: #DA70D6;
    color: white;
    padding: 14px 20px;
    margin: 8px 0;
    border: none;
    border-radius: 4px;
    cursor: pointer;
  }

  input[type=submit]:hover {
    background-color: #a270da;
  }

 button.delete {
    margin:auto;
    display:block;
  }

